kubernetes/express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes/
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: express
  name: express
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: express
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o kubernetes/
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: express
    spec:
      containers:
        - image: express
          name: dragonball
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
