kubernetes/express.yml
apiVersion: v1
kind: Service
metadata:
  name: express
spec:
  selector:
    app: express
  ports:
    - name: "3000"
      # exposed port
      port: 3000
      # port to forward to inside the pod
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
        - image: acedeno/dragonball:v2
          name: dragonball
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
